--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <body>
         <header>
-            <h1>Welcome to Television Hangman</h1>
+            <h1>Welcome to TV Hangman</h1>
         </header>
         
         <main>
