Remade the javascript as an object

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <body>
         <header>
             <h1>Welcome to TV Hangman</h1>
+            <br>
+            <p>In this game of hangman, all of the phrases will be the name of popular TV Shows. To make a guess just type a letter.</p>
         </header>
         
         <main>
@@ -41,7 +43,7 @@
                     <div id="phrase"></div>
                 </div>
 
-                <button id="generate" onclick="generateHangman()"><i class="fas fa-power-off"></i></button>
+                <button id="generate"><i class="fas fa-power-off"></i></button>
             </div>
         </main>
 
